name:                reflex-dom-htmlea
version:             0.1.1.5
synopsis:            A reflex-dom API for HTML elements and attributes.
description:         This package introduces sets of functions for writing
                     html elements and attributes. This way the compiler
                     can help to avoid some of the typos that otherwise would
                     have to be debugged out on runtime (that can happen
                     easily with el-family of functions). The functions 
                     introduced in this package can be used together with
                     el-family of functions.
license:             BSD3
license-file:        LICENSE
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
extra-source-files:  
cabal-version:       >=1.24

library
  exposed-modules:     Reflex.Dom.HTML5.Attrs
                       , Reflex.Dom.HTML5.Attrs.AnyAttr
                       , Reflex.Dom.HTML5.Attrs.Aria
                       , Reflex.Dom.HTML5.Attrs.Attrs
                       , Reflex.Dom.HTML5.Attrs.Common
                       , Reflex.Dom.HTML5.Attrs.Globals
                       , Reflex.Dom.HTML5.Attrs.DataAttrs
                       , Reflex.Dom.HTML5.Elements
                       -- , Reflex.Dom.HTML5.Elements.Class
                       , Reflex.Dom.HTML5.Elements.Elements
                       , Reflex.Dom.HTML5.Elements.Embedded
                       , Reflex.Dom.HTML5.Elements.Interactive
                       , Reflex.Dom.HTML5.Elements.Metadata
                       , Reflex.Dom.HTML5.Elements.SectionHead
                       , Reflex.Dom.HTML5.Elements.Tabular
                       , Reflex.Dom.HTML5.Component
                       , Reflex.Dom.HTML5.Component.Table
                       , Reflex.Dom.HTML5.Component.Table.Common
                       , Reflex.Dom.HTML5.Component.Table.StateInfo
                       , Reflex.Dom.HTML5.Component.Table.TableV
                       , Reflex.Dom.HTML5.Component.Table.TdComb
                       , Reflex.Dom.HTML5.Component.Table.TfootComb
                       , Reflex.Dom.HTML5.Component.Table.ThComb

  hs-source-dirs:      lib/src
  default-language:    Haskell2010
  build-depends:       base
                       , containers
                       , data-default
                       , ghcjs-dom
                       , lens
                       , reflex
                       , reflex-dom
                       , reflex-dom-core
                       , text
                       , vector
                       , jsaddle
                       , jsaddle-warp
  ghc-options: -Wall -O2 -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists 
