name:                example1
version:             0.1.1.1
synopsis:            Examples
description:         Examples: for ghcid dev-work, for nix-build and
                     for building a webkit2gtk app.
license:             BSD3
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
cabal-version:       >=1.24

library
  exposed-modules:     MainW
  hs-source-dirs:      libEx1
  default-language:    Haskell2010
  build-depends:        base
                      , containers
                      , ghcjs-dom
                      , reflex
                      , reflex-dom
                      , text
                      , jsaddle
                      , reflex-dom-htmlea

executable example1
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:       base
                     , example1
                     , reflex-dom
                     , reflex-dom-core
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -O2 -threaded -rtsopts -with-rtsopts=-N
               -Wincomplete-record-updates -Wmissing-import-lists



-- To use ghcid and dev-server.sh, uncomment the following before
-- entering into the nix-shell.
-- executable example1-wai
--   if impl(ghcjs)
--     buildable:       False
--   main-is:           Main.hs
--   hs-source-dirs:    app-wai
--   default-language:  Haskell2010
--   build-depends:       base
--                      , example1
--                      , reflex-dom
--                      , reflex-dom-core
--                      , jsaddle
--                      , jsaddle-warp
--                      -- following are for ghcid autoloading 
--                      , wai
--                      , warp
--                      , websockets
--                      , wai-app-static
--   ghc-options: -Wall -Wincomplete-uni-patterns -Wmissing-import-lists 
--                -O2 -threaded -rtsopts -with-rtsopts=-N
--                -Wincomplete-record-updates -Wno-redundant-constraints

