name:                exampleTree
version:             0.1.1.2
synopsis:            Examples (tree components)
description:         Examples: for ghcid dev-work, for nix-build and
                     for building a webkit2gtk app.
license:             BSD3
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
cabal-version:       >=1.24


library
  exposed-modules:     MainW3
  hs-source-dirs:      libTree
  default-language:    Haskell2010
  build-depends:        base
                      , containers
                      , lens
                      , mtl
                      , text
                      , ghcjs-dom
                      , reflex
                      , reflex-dom
                      , jsaddle
                      , reflex-dom-htmlea

executable exampleTree
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:       base
                     , exampleTree
                     , reflex-dom
                     , reflex-dom-core
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates 
               -O2 -threaded -rtsopts -with-rtsopts=-N
               -Wmissing-import-lists -Wno-redundant-constraints


